Update docs and get journal_groups endpoint
