# services/web-api/src/controllers/journal.rs
@@ -1,8 +1,9 @@
 use actix_web::{
     get, post,
-    web::{Data, Json},
+    web::{Data, Json, Query},
     HttpResponse, Scope,
 };
+use serde::Deserialize;
 use sqlx::{Pool, Postgres};
 
 use crate::types::{error::Error, journal_group::JournalGroup};
@@ -13,14 +14,20 @@ pub fn scope() -> Scope {
         .service(update_groups)
 }
 
+#[derive(Debug, Deserialize)]
+pub struct FindGroupsQuery {
+    // TODO: Move into auth cookies
+    user_id: i64,
+}
+
 #[get("/groups")]
-async fn get_groups(db_pool: Data<Pool<Postgres>>) -> Result<Json<Vec<JournalGroup>>, Error> {
+async fn get_groups(
+    query: Query<FindGroupsQuery>,
+    db_pool: Data<Pool<Postgres>>,
+) -> Result<Json<Vec<JournalGroup>>, Error> {
     let mut txn = db_pool.begin().await?;
 
-    // TODO: Get this value from cookies
-    let user_id = 1;
-
-    let journal_groups = JournalGroup::find_all_by_user_id(user_id)
+    let journal_groups = JournalGroup::find_all_by_user_id(query.user_id)
         .fetch_all(&mut txn)
         .await?;
 
